fixes dyeable wool on pokemobs not working correctly